<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:menuCategory="container">
        <item android:id="@+id/m_search"
            android:title="Search"
            android:icon="@drawable/ic_search_black_24dp"
            app:showAsAction="collapseActionView|always"
            app:actionViewClass="android.support.v7.widget.SearchView"
            />
        <item android:id="@+id/m_liveChat"
            android:title="@string/strFav"
            android:icon = "@drawable/ic_chat_black_24dp"
            app:showAsAction="always" />
        <item android:id="@+id/m_favorite"
            android:title="@string/strLiveChat"
            android:icon = "@drawable/ic_love_fill"
            app:showAsAction="always" />
        <item android:id="@+id/m_notif"
            android:title="@string/strReminder" />
        <item android:id="@+id/m_lgsetting"
            android:title="@string/strLang" />
    </group>

</menu>