<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".movie.MovieFragment">

    <HorizontalScrollView
        android:id="@+id/hsv_movie"
        style="@android:style/Widget.Holo.HorizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarSize="0dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnTopRated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/border"
                android:fontFamily="@font/bms"
                android:text="@string/strTopRated"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btnUpc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/border"
                android:fontFamily="@font/bms"
                android:text="@string/strUpc"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btnPop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/border"
                android:fontFamily="@font/bms"
                android:text="@string/strPopTit"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btnNowPl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:fontFamily="@font/bms"
                android:text="@string/strNP"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>
    </HorizontalScrollView>

    <android.support.v4.widget.NestedScrollView
        android:layout_below="@id/hsv_movie"
        android:id="@+id/movie_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rcMovie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:nestedScrollingEnabled="true"></android.support.v7.widget.RecyclerView>

            <ProgressBar
                android:id="@+id/pb"
                android:layout_below="@id/rcMovie"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/btnLoadMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rcMovie"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/bms"
                android:text="@string/strLoadMore"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>